--- a/styles/index.scss
+++ b/styles/index.scss
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
-@import "/styles/component/index1";
-@import "/styles/component/section1";
-@import "/styles/component/section2";
-@import "/styles/component/section3";
+@import "./components/index1";
+@import "./components/section1";
+@import "./components/section2";
+@import "./components/section3";
