--- a/styles/components/_index1.scss
+++ b/styles/components/_index1.scss
@@ -4,6 +4,13 @@
     box-sizing: border-box;
     font-family: 'Poppins', sans-serif;
     body{
-
+        main{
+            nav{
+                display: flex;
+                justify-content: space-between;
+                align-items: center;
+                background-color: brown;
+            }
+        }
     }
 }
