--- a/styles/components/_index1.scss
+++ b/styles/components/_index1.scss
@@ -10,6 +10,11 @@
                 justify-content: space-between;
                 align-items: center;
                 background-color: brown;
+                padding: 10px 20px;
+                h1{
+                    color: white;
+                    font-size: 30px;
+                }
             }
         }
     }
