--- a/styles/components/_index1.scss
+++ b/styles/components/_index1.scss
@@ -15,6 +15,29 @@
                     color: white;
                     font-size: 30px;
                 }
+                .menu{
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                    gap: 20px;
+                    li{
+                        list-style: none;
+                        a{
+                            text-decoration: none;
+                            color: white;
+                        }
+                        a:hover{
+                            color: black;
+                        }
+
+                    }
+
+                }
+                .button{
+                    button{
+                        padding: 10px 20px;
+                    }
+                }
             }
         }
     }
