finished styling the navbar and responsiveness

--- a/styles/components/_index1.scss
+++ b/styles/components/_index1.scss
@@ -4,15 +4,19 @@
     box-sizing: border-box;
     font-family: 'Poppins', sans-serif;
     body{
+        background-color: rgb(201, 201, 201);
         main{
             nav{
                 display: flex;
                 justify-content: space-between;
                 align-items: center;
-                background-color: brown;
+                background-color: rgb(201, 201, 201);
                 padding: 10px 20px;
+                border-bottom: 2px solid black;
+                width: 96%;
+                margin: 0 auto;
                 h1{
-                    color: white;
+                    color: black;
                     font-size: 30px;
                 }
                 .menu{
@@ -24,10 +28,10 @@
                         list-style: none;
                         a{
                             text-decoration: none;
-                            color: white;
+                            color: black;
                         }
                         a:hover{
-                            color: black;
+                            color: white;
                         }
 
                     }
@@ -36,7 +40,82 @@
                 .button{
                     button{
                         padding: 10px 20px;
+                        border: none;
                     }
+                }
+                svg{
+                    display: none;
+                }
+            }
+        }
+    }
+}
+
+@media screen and (max-width: 1000px) {
+    body{
+        main{
+            nav{
+                h1{
+                    font-size: 27px;
+                }
+                .menu{
+                    gap: 10px;
+                    li{
+                        a{
+                            font-size: 14px;
+                        }
+                    }
+
+                }
+            }
+        }
+    }
+    
+}
+
+@media screen and (max-width: 700px) {
+    body{
+        main{
+            nav{
+                h1{
+                    font-size: 25px;
+                }
+                .menu{
+                    display: none;
+                }
+                .button{
+                    margin: 0 auto;
+                    button{
+                        padding: 10px 30px;
+                        border: none;
+                    }
+                }
+                svg{
+                    display: flex;
+                    justify-content: space-around;
+                    width: 40px;
+                    height: 30px;
+                }
+            }
+        }
+    }
+}
+
+@media screen and (max-width: 450px) {
+    body{
+        main{
+            nav{
+                h1{
+                    font-size: 25px;
+                }
+                .button{
+                   display: none;
+                }
+                svg{
+                    display: flex;
+                    justify-content: space-around;
+                    width: 40px;
+                    height: 30px;
                 }
             }
         }
