started styling the first section

--- a/styles/index.css
+++ b/styles/index.css
@@ -92,5 +92,10 @@
     height: 30px;
   }
 }
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
 
 /*# sourceMappingURL=index.css.map */
