--- a/styles/components/_section1.scss
+++ b/styles/components/_section1.scss
@@ -2,4 +2,11 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+    body{
+        main{
+            .section1{
+                background-color: white;
+            }
+        }
+    }
 }
