--- a/styles/components/_section1.scss
+++ b/styles/components/_section1.scss
@@ -6,6 +6,29 @@
         main{
             .section1{
                 background-color: white;
+                width: 100%;
+                height: 350px;
+                padding-top: 100px;
+                .desc{
+                    text-align: center;
+                    h1{
+                        color: black;
+                        text-transform: uppercase;
+                        font-size: 50px;
+                    }
+                    p{
+                        color: black;
+                        text-transform: uppercase;
+                        font-weight: bold;
+                        padding-top: 3px;
+                        font-size: 20px;
+                    }
+                }
+                .but{
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                }
             }
         }
     }
