--- a/styles/index.css
+++ b/styles/index.css
@@ -99,6 +99,29 @@
 }
 * body main .section1 {
   background-color: white;
+  width: 100%;
+  height: 350px;
+  padding-top: 100px;
+}
+* body main .section1 .desc {
+  text-align: center;
+}
+* body main .section1 .desc h1 {
+  color: black;
+  text-transform: uppercase;
+  font-size: 50px;
+}
+* body main .section1 .desc p {
+  color: black;
+  text-transform: uppercase;
+  font-weight: bold;
+  padding-top: 3px;
+  font-size: 20px;
+}
+* body main .section1 .but {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 /*# sourceMappingURL=index.css.map */
