finished styling the section 1

--- a/styles/index.css
+++ b/styles/index.css
@@ -123,5 +123,9 @@
   justify-content: center;
   align-items: center;
 }
+* body main .section1 .but button {
+  padding: 10px 30px;
+  margin-top: 20px;
+}
 
 /*# sourceMappingURL=index.css.map */
