--- a/styles/components/_section1.scss
+++ b/styles/components/_section1.scss
@@ -28,6 +28,10 @@
                     display: flex;
                     justify-content: center;
                     align-items: center;
+                    button{
+                        padding: 10px 30px;
+                        margin-top: 20px;
+                    }
                 }
             }
         }
