--- a/styles/components/_section1.scss
+++ b/styles/components/_section1.scss
@@ -5,7 +5,7 @@
     body{
         main{
             .section1{
-                background-color: white;
+                background-color: blue;
                 width: 100%;
                 height: 350px;
                 padding-top: 100px;
