--- a/styles/index.css
+++ b/styles/index.css
@@ -98,7 +98,7 @@
   box-sizing: border-box;
 }
 * body main .section1 {
-  background-color: white;
+  background-color: blue;
   width: 100%;
   height: 350px;
   padding-top: 100px;
