--- a/styles/index.css
+++ b/styles/index.css
@@ -128,4 +128,10 @@
   margin-top: 20px;
 }
 
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+
 /*# sourceMappingURL=index.css.map */
