--- a/styles/components/_section2.scss
+++ b/styles/components/_section2.scss
@@ -2,4 +2,140 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+    body{
+        main{
+            .section2-1{
+                display: flex;
+                justify-content: space-between;
+                align-items: center;
+                background-color: white;
+                padding: 20px 50px;
+                gap: 100px;
+                .img{
+                    border: 3px solid black;
+                    width: 50%;
+                    img{
+                        width: 100%;
+                        height: 400px;
+                    }
+                }
+                .desc1{
+                    width: 50%;
+                    h1{
+                        font-size: 15px;
+                    }
+                    h2{
+                        text-transform: uppercase;
+                    }
+                    p{
+                        font-size: 15px;
+                    }
+                    button{
+                        padding: 10px 20px;
+                        margin-top: 10px;
+                    }
+                }
+            }
+            .section2-2{
+                display: none;
+            }
+        }
+    }
 }
+
+@media screen and (max-width: 1000px){
+    body{
+        main{
+            .section2-1{
+                .img{
+                    img{
+                        width: 100%;
+                        height: 300px;
+                    }
+                }
+                .desc1{
+                    width: 50%;
+                    h2{
+                        font-size: 20px;
+                    }
+                    .p{
+                        display: none;
+                    }
+                    button{
+                        padding: 10px 20px;
+                        margin-top: 0px;
+                    }
+                }
+            }
+        }
+    }
+}
+
+@media screen and (max-width: 700px) {
+    body{
+        main{
+            .section2-1{
+                display: none;
+            }
+            .section2-2{
+                display: block;
+                background-color: white;
+                padding: 10px 30px;
+                .img{
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                    img{
+                        width: 70%;
+                        height: 300px;
+                    }
+                }
+                h1{
+                    font-size: 16px;
+                    text-align: center;
+                }
+                h2{
+                    text-align: center;
+                    font-size: 20px;
+                    text-transform: uppercase;
+                }
+                p{
+                    text-align: center;
+                }
+                .but1{
+                    display: flex;
+                    justify-content: center;
+                    button{
+                        padding: 10px 30px;
+                    }
+                }
+            }
+        }
+    }
+}
+
+@media screen and (max-width: 500px) {
+    body{
+        main{
+            .section2-2{
+                .img{
+                    img{
+                        width: 70%;
+                        height: 200px;
+                    }
+                }
+                h2{
+                    font-size: 17px;
+                }
+                p{
+                    font-size: 15px;
+                }
+                .p{
+                    display: none;
+                }
+            }
+        }
+    }
+    
+}
+    
