--- a/styles/index.css
+++ b/styles/index.css
@@ -98,7 +98,6 @@
   box-sizing: border-box;
 }
 * body main .section1 {
-  background-color: blue;
   width: 100%;
   height: 350px;
   padding-top: 100px;
@@ -132,6 +131,114 @@
   padding: 0;
   margin: 0;
   box-sizing: border-box;
+}
+* body main .section2-1 {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: white;
+  padding: 20px 50px;
+  gap: 100px;
+}
+* body main .section2-1 .img {
+  border: 3px solid black;
+  width: 50%;
+}
+* body main .section2-1 .img img {
+  width: 100%;
+  height: 400px;
+}
+* body main .section2-1 .desc1 {
+  width: 50%;
+}
+* body main .section2-1 .desc1 h1 {
+  font-size: 15px;
+}
+* body main .section2-1 .desc1 h2 {
+  text-transform: uppercase;
+}
+* body main .section2-1 .desc1 p {
+  font-size: 15px;
+}
+* body main .section2-1 .desc1 button {
+  padding: 10px 20px;
+  margin-top: 10px;
+}
+* body main .section2-2 {
+  display: none;
+}
+
+@media screen and (max-width: 1000px) {
+  body main .section2-1 .img img {
+    width: 100%;
+    height: 300px;
+  }
+  body main .section2-1 .desc1 {
+    width: 50%;
+  }
+  body main .section2-1 .desc1 h2 {
+    font-size: 20px;
+  }
+  body main .section2-1 .desc1 .p {
+    display: none;
+  }
+  body main .section2-1 .desc1 button {
+    padding: 10px 20px;
+    margin-top: 0px;
+  }
+}
+@media screen and (max-width: 700px) {
+  body main .section2-1 {
+    display: none;
+  }
+  body main .section2-2 {
+    display: block;
+    background-color: white;
+    padding: 10px 30px;
+  }
+  body main .section2-2 .img {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  body main .section2-2 .img img {
+    width: 70%;
+    height: 300px;
+  }
+  body main .section2-2 h1 {
+    font-size: 16px;
+    text-align: center;
+  }
+  body main .section2-2 h2 {
+    text-align: center;
+    font-size: 20px;
+    text-transform: uppercase;
+  }
+  body main .section2-2 p {
+    text-align: center;
+  }
+  body main .section2-2 .but1 {
+    display: flex;
+    justify-content: center;
+  }
+  body main .section2-2 .but1 button {
+    padding: 10px 30px;
+  }
+}
+@media screen and (max-width: 500px) {
+  body main .section2-2 .img img {
+    width: 70%;
+    height: 200px;
+  }
+  body main .section2-2 h2 {
+    font-size: 17px;
+  }
+  body main .section2-2 p {
+    font-size: 15px;
+  }
+  body main .section2-2 .p {
+    display: none;
+  }
 }
 
 /*# sourceMappingURL=index.css.map */
