--- a/styles/index.css
+++ b/styles/index.css
@@ -239,5 +239,10 @@
     display: none;
   }
 }
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
 
 /*# sourceMappingURL=index.css.map */
