--- a/styles/index.css
+++ b/styles/index.css
@@ -244,5 +244,130 @@
   margin: 0;
   box-sizing: border-box;
 }
+* body main .section3 {
+  padding: 20px 40px;
+}
+* body main .section3 .h1 {
+  text-align: center;
+  padding-top: 20px;
+  padding-bottom: 20px;
+}
+* body main .section3 .box {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+* body main .section3 .box1 {
+  width: 30%;
+  background-color: white;
+  padding: 20px 30px;
+}
+* body main .section3 .box1 svg {
+  width: 13%;
+  padding-bottom: 17px;
+}
+* body main .section3 .box1 h1 {
+  text-transform: uppercase;
+  font-size: 19px;
+}
+* body main .section3 .box1 p {
+  font-size: 15px;
+}
+* body main .section3 .box2 {
+  width: 30%;
+  background-color: white;
+  padding: 20px 30px;
+}
+* body main .section3 .box2 svg {
+  width: 13%;
+  padding-bottom: 17px;
+}
+* body main .section3 .box2 h1 {
+  text-transform: uppercase;
+  font-size: 19px;
+}
+* body main .section3 .box2 p {
+  font-size: 15px;
+}
+* body main .section3 .box3 {
+  width: 30%;
+  background-color: white;
+  padding: 20px 30px;
+}
+* body main .section3 .box3 svg {
+  width: 13%;
+  padding-bottom: 17px;
+}
+* body main .section3 .box3 h1 {
+  text-transform: uppercase;
+  font-size: 19px;
+}
+* body main .section3 .box3 p {
+  font-size: 15px;
+}
+
+@media screen and (max-width: 1000px) {
+  body main .section3 {
+    padding: 20px 40px;
+  }
+  body main .section3 .h1 {
+    text-align: center;
+    padding-top: 20px;
+    padding-bottom: 20px;
+  }
+  body main .section3 .box {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+  body main .section3 .box1 {
+    width: 30%;
+    background-color: white;
+    padding: 20px 30px;
+  }
+  body main .section3 .box1 svg {
+    width: 13%;
+    padding-bottom: 17px;
+  }
+  body main .section3 .box1 h1 {
+    text-transform: uppercase;
+    font-size: 19px;
+  }
+  body main .section3 .box1 p {
+    font-size: 15px;
+  }
+  body main .section3 .box2 {
+    width: 30%;
+    background-color: white;
+    padding: 20px 30px;
+  }
+  body main .section3 .box2 svg {
+    width: 13%;
+    padding-bottom: 17px;
+  }
+  body main .section3 .box2 h1 {
+    text-transform: uppercase;
+    font-size: 19px;
+  }
+  body main .section3 .box2 p {
+    font-size: 15px;
+  }
+  body main .section3 .box3 {
+    width: 30%;
+    background-color: white;
+    padding: 20px 30px;
+  }
+  body main .section3 .box3 svg {
+    width: 13%;
+    padding-bottom: 17px;
+  }
+  body main .section3 .box3 h1 {
+    text-transform: uppercase;
+    font-size: 19px;
+  }
+  body main .section3 .box3 p {
+    font-size: 15px;
+  }
+}
 
 /*# sourceMappingURL=index.css.map */
