--- a/styles/index.css
+++ b/styles/index.css
@@ -307,66 +307,43 @@
 }
 
 @media screen and (max-width: 1000px) {
-  body main .section3 {
-    padding: 20px 40px;
-  }
-  body main .section3 .h1 {
-    text-align: center;
-    padding-top: 20px;
-    padding-bottom: 20px;
-  }
   body main .section3 .box {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+    flex-wrap: wrap;
   }
-  body main .section3 .box1 {
-    width: 30%;
-    background-color: white;
-    padding: 20px 30px;
+  body main .section3 .box .box1 svg {
+    width: 20%;
+    height: 20%;
+    padding-bottom: 12px;
+  }
+  body main .section3 .box .box2 svg {
+    width: 20%;
+    height: 20%;
+    padding-bottom: 12px;
+  }
+  body main .section3 .box .box3 svg {
+    width: 20%;
+    height: 20%;
+    padding-bottom: 12px;
+  }
+}
+@media screen and (max-width: 700px) {
+  body main .section3 {
+    flex-wrap: wrap;
   }
   body main .section3 .box1 svg {
-    width: 13%;
-    padding-bottom: 17px;
-  }
-  body main .section3 .box1 h1 {
-    text-transform: uppercase;
-    font-size: 19px;
-  }
-  body main .section3 .box1 p {
-    font-size: 15px;
-  }
-  body main .section3 .box2 {
-    width: 30%;
-    background-color: white;
-    padding: 20px 30px;
+    width: 20%;
+    height: 20%;
+    padding-bottom: 12px;
   }
   body main .section3 .box2 svg {
-    width: 13%;
-    padding-bottom: 17px;
-  }
-  body main .section3 .box2 h1 {
-    text-transform: uppercase;
-    font-size: 19px;
-  }
-  body main .section3 .box2 p {
-    font-size: 15px;
-  }
-  body main .section3 .box3 {
-    width: 30%;
-    background-color: white;
-    padding: 20px 30px;
+    width: 20%;
+    height: 20%;
+    padding-bottom: 12px;
   }
   body main .section3 .box3 svg {
-    width: 13%;
-    padding-bottom: 17px;
-  }
-  body main .section3 .box3 h1 {
-    text-transform: uppercase;
-    font-size: 19px;
-  }
-  body main .section3 .box3 p {
-    font-size: 15px;
+    width: 20%;
+    height: 20%;
+    padding-bottom: 12px;
   }
 }
 
