--- a/styles/components/_section3.scss
+++ b/styles/components/_section3.scss
@@ -13,12 +13,12 @@
                 }
                 .box{
                     display: flex;
-                    justify-content: space-between;
+                    justify-content: center;
                     align-items: center;
-                    max-width: 100%;
+                    gap: 20px;
                 }
                 .box1{
-                    width: 30%;
+                    width: 390px;
                     background-color: white;
                     padding: 20px 30px;
                     svg{
@@ -34,7 +34,7 @@
                     }
                 }
                 .box2{
-                    width: 30%;
+                    width: 390px;
                     background-color: white;
                     padding: 20px 30px;
                     svg{
@@ -50,7 +50,7 @@
                     }
                 }
                 .box3{
-                width: 30%;
+                width: 390px;
                     background-color: white;
                     padding: 20px 30px;
                     svg{
@@ -115,6 +115,7 @@
                     display: flex;
                     flex-wrap: wrap;
                     .box1{
+                        width: 300px;
                         svg{
                             width: 30%;
                             height: 20%;
